# pluto-rs

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.test  LICENSE  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  sqlx-data.json
.github/: dependabot.yml
.github/workflows/: push.yml
hasura/: config.yaml
hasura/metadata/databases/: databases.yaml
hasura/metadata/databases/pluto_db/tables/: tables.yaml
hasura/migrations/pluto_db/1637709504861_exchanges/: down.sql  up.sql
hasura/migrations/pluto_db/1638232310266_update_exchanges_with_numeric/: down.sql  up.sql
src/: actions.rs  api.rs  http_error.rs  lib.rs  main.rs  model.rs  util.rs
tests/: integration.rs
