[package]
edition = "2021"
name = "pluto-rs"
version = "0.1.0"
authors = ["nidble"]
repository = "https://github.com/nidble/pluto-rs"
description = "Rust"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.49"
async-trait = "0.1.51"
bytes = "1"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres", "uuid", "offline"] }
rweb = { version = "0.6", features = ["openapi"] }
tokio = { version = "1.14.0", features = ["full"] }
# Required to rename uuid::Uuid -> uuid and avoid collision.
uuid_ = { package = "uuid", version = "0.8.2", features = ["serde"] }

[dev-dependencies]
mockall = "0.10.2"
