[package]
edition = "2021"
name = "pluto-rs"
version = "0.1.0"
authors = ["nidble"]
repository = "https://github.com/nidble/pluto-rs"
description = "Rust"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.49"
async-trait = "0.1.51"
bytes = "1"
dotenv = "0.15.0"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "postgres", "uuid", "offline", "chrono", "bigdecimal" ] }
reqwest = { version = "0.11", features = ["json"] }
rusty-money = "0.4.1"
rust_decimal_macros = "1.17.0"
rust_decimal = "1.17.0"
rweb = { version = "0.15", features = ["openapi"] }
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.14.0", features = ["full"] }
# Required to rename uuid::Uuid -> uuid and avoid collision.
uuid_ = { package = "uuid", version = "0.8.2", features = ["serde"] }

[dev-dependencies]
mockall = "0.11.0"
